<resources>
    <string name="app_name">Fantasy Fitness</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="Username">Username</string>
    <string name="start_workout">Start Workout</string>
    <string name="pause_workout">Pause Workout</string>
    <string name="resume_workout">Resume Workout</string>
    <string name="stop_workout">Stop Workout</string>
    <string name="complete_workout">Complete Workout</string>
    <string name="map_descriptor">Game Map</string>
    <string name="close">Close</string>
    <string name="travel">Travel</string>
    <string name="workout_records">Workout Records</string>
    <string name="settings">Settings</string>
    <string name="dismiss">Dismiss</string>
...
