...
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="home"
        app:showAsAction="ifRoom"/>
    <!--Button to launch the workout fragment-->
    <item
        android:id="@+id/action_workout"
        android:icon="@drawable/run"
        android:title="workout"
        app:showAsAction="ifRoom"/>
    <!--Button to return to the world map fragment-->
    <item
        android:id="@+id/action_map"
...
